--- a/high-u-user/package.json
+++ b/high-u-user/package.json
@@ -24,6 +24,7 @@
     "react-dom": "18.2.0",
     "react-material-ui-carousel": "^3.4.2",
     "styled-components": "^5.3.6",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "material-ui-image": "^3.3.2"
   }
 }
