--- a/high-u-user/package.json
+++ b/high-u-user/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.16",
+    "@mui/joy": "^5.0.0-alpha.58",
     "@mui/material": "^5.10.17",
     "@mui/styled-engine-sc": "^5.10.16",
     "@types/node": "18.11.13",
@@ -19,12 +20,12 @@
     "@types/react-dom": "18.0.9",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
+    "material-ui-image": "^3.3.2",
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-material-ui-carousel": "^3.4.2",
     "styled-components": "^5.3.6",
-    "typescript": "4.9.4",
-    "material-ui-image": "^3.3.2"
+    "typescript": "4.9.4"
   }
 }
