--- a/high-u-user/package.json
+++ b/high-u-user/package.json
@@ -27,5 +27,8 @@
     "react-material-ui-carousel": "^3.4.2",
     "styled-components": "^5.3.6",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.2.4"
   }
 }
