--- a/high-u-user/package.json
+++ b/high-u-user/package.json
@@ -15,9 +15,11 @@
     "@mui/joy": "^5.0.0-alpha.58",
     "@mui/material": "^5.10.17",
     "@mui/styled-engine-sc": "^5.10.16",
+    "@types/lodash": "^4.14.191",
     "@types/node": "18.11.13",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "axios": "^1.2.1",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "material-ui-image": "^3.3.2",
