--- a/high-u-user/package.json
+++ b/high-u-user/package.json
@@ -27,6 +27,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-material-ui-carousel": "^3.4.2",
+    "react-webcam": "^7.0.1",
     "styled-components": "^5.3.6",
     "typescript": "4.9.4"
   },
