--- a/high-u-user/package.json
+++ b/high-u-user/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.16",
     "@mui/joy": "^5.0.0-alpha.58",
+    "@mui/lab": "^5.0.0-alpha.114",
     "@mui/material": "^5.10.17",
     "@mui/styled-engine-sc": "^5.10.16",
     "@types/lodash": "^4.14.191",
