--- a/high-u-user/package.json
+++ b/high-u-user/package.json
@@ -17,12 +17,11 @@
     "@mui/material": "^5.10.17",
     "@mui/styled-engine-sc": "^5.10.16",
     "@types/lodash": "^4.14.191",
-    "@types/node": "18.11.13",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "axios": "^1.2.1",
     "eslint": "8.29.0",
-    "eslint-config-next": "13.0.6",
+    "eslint-config-next": "^12.0.4",
     "material-ui-image": "^3.3.2",
     "next": "13.0.6",
     "react": "18.2.0",
@@ -33,6 +32,7 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@types/node": "^18.11.18",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20",
     "tailwindcss": "^3.2.4"
