--- a/high-u-admin/package.json
+++ b/high-u-admin/package.json
@@ -15,9 +15,12 @@
     "@mui/material": "^5.11.3",
     "@mui/styled-engine-sc": "^5.11.0",
     "@next/font": "13.1.1",
+    "@types/chart.js": "^2.9.37",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "chart.js": "^4.1.2",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
