--- a/high-u-admin/package.json
+++ b/high-u-admin/package.json
@@ -16,6 +16,7 @@
     "@mui/styled-engine-sc": "^5.11.0",
     "@next/font": "13.1.1",
     "@types/chart.js": "^2.9.37",
+    "@types/lodash.isequal": "^4.5.6",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
