--- a/high-u-admin/package.json
+++ b/high-u-admin/package.json
@@ -25,8 +25,8 @@
     "chartjs-plugin-datalabels": "^2.2.0",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
-    "material-ui-next-responsive-table": "^0.4.3",
     "next": "13.1.1",
+    "notistack": "^2.0.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.57.1",
