--- a/front/package.json
+++ b/front/package.json
@@ -16,6 +16,7 @@
     "@mui/lab": "^5.0.0-alpha.114",
     "@mui/material": "^5.10.17",
     "@mui/styled-engine-sc": "^5.10.16",
+    "@tremor/react": "^1.6.0",
     "@types/lodash": "^4.14.191",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
@@ -25,6 +26,7 @@
     "eslint-config-next": "^12.0.4",
     "material-ui-image": "^3.3.2",
     "next": "13.0.6",
+    "option": "^0.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-material-ui-carousel": "^3.4.2",
