--- a/front/package.json
+++ b/front/package.json
@@ -26,6 +26,7 @@
     "eslint-config-next": "^12.0.4",
     "material-ui-image": "^3.3.2",
     "next": "13.0.6",
+    "next-auth": "^4.18.8",
     "option": "^0.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
