--- a/front/package.json
+++ b/front/package.json
@@ -16,6 +16,12 @@
     "@mui/lab": "^5.0.0-alpha.114",
     "@mui/material": "^5.10.17",
     "@mui/styled-engine-sc": "^5.10.16",
+    "@techstark/opencv-js": "^4.6.0-release.1",
+    "@tensorflow-models/coco-ssd": "^2.2.2",
+    "@tensorflow-models/face-detection": "^1.0.1",
+    "@tensorflow-models/posenet": "^2.2.2",
+    "@tensorflow/tfjs": "^4.2.0",
+    "@tensorflow/tfjs-backend-wasm": "^4.2.0",
     "@tremor/react": "^1.6.0",
     "@types/lodash": "^4.14.191",
     "@types/react": "18.0.26",
@@ -26,12 +32,15 @@
     "eslint-config-next": "^12.0.4",
     "material-ui-image": "^3.3.2",
     "next": "13.0.6",
+    "opencv.js": "^1.2.1",
     "option": "^0.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-material-ui-carousel": "^3.4.2",
     "react-webcam": "^7.0.1",
     "styled-components": "^5.3.6",
+    "tensorflow-models": "^0.0.1",
+    "tracking": "^1.1.3",
     "typescript": "4.9.4"
   },
   "devDependencies": {
