--- a/front/package.json
+++ b/front/package.json
@@ -50,6 +50,8 @@
     "@types/node": "^18.11.18",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20",
+    "postcss-import": "^15.1.0",
+    "postcss-preset-env": "^8.0.1",
     "tailwindcss": "^3.2.4"
   }
 }
