--- a/front/package.json
+++ b/front/package.json
@@ -31,6 +31,7 @@
     "eslint": "8.29.0",
     "eslint-config-next": "^12.0.4",
     "material-ui-image": "^3.3.2",
+    "mongodb": "^4.13.0",
     "mui-datatables": "^4.3.0",
     "next": "13.0.6",
     "opencv.js": "^1.2.1",
