--- a/front/package.json
+++ b/front/package.json
@@ -33,8 +33,8 @@
     "material-ui-image": "^3.3.2",
     "mongodb": "^4.13.0",
     "mui-datatables": "^4.3.0",
+    "mysql2": "^3.1.0",
     "next": "13.0.6",
-    "opencv.js": "^1.2.1",
     "option": "^0.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
