--- a/front/package.json
+++ b/front/package.json
@@ -30,6 +30,7 @@
     "axios": "^1.2.1",
     "eslint": "8.29.0",
     "eslint-config-next": "^12.0.4",
+    "googleapis": "^110.0.0",
     "material-ui-image": "^3.3.2",
     "mongodb": "^4.13.0",
     "mui-datatables": "^4.3.0",
