--- a/backup/front/package.json
+++ b/backup/front/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@firebase/app": "^0.9.1",
     "@mui/icons-material": "^5.10.16",
     "@mui/lab": "^5.0.0-alpha.114",
     "@mui/material": "^5.10.17",
@@ -30,9 +31,13 @@
     "axios": "^1.2.1",
     "eslint": "8.29.0",
     "eslint-config-next": "^12.0.4",
+    "firebase": "^9.16.0",
+    "firebase-admin": "^11.5.0",
+    "googleapis": "^110.0.0",
     "material-ui-image": "^3.3.2",
     "mongodb": "^4.13.0",
     "mui-datatables": "^4.3.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.1.0",
     "next": "13.0.6",
     "option": "^0.2.4",
@@ -49,6 +54,7 @@
   "devDependencies": {
     "@types/aos": "^3.0.4",
     "@types/mui-datatables": "^4.3.0",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.11.18",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20"
