--- a/front/package.json
+++ b/front/package.json
@@ -27,6 +27,7 @@
     "@types/lodash": "^4.14.191",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "animejs": "^3.2.1",
     "aos": "^2.3.4",
     "axios": "^1.2.1",
     "dompurify": "^3.0.0",
@@ -54,6 +55,7 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@types/animejs": "^3.1.7",
     "@types/aos": "^3.0.4",
     "@types/dompurify": "^2.4.0",
     "@types/mui-datatables": "^4.3.0",
