--- a/front/package.json
+++ b/front/package.json
@@ -35,6 +35,7 @@
     "eslint-config-next": "^12.0.4",
     "firebase": "^9.16.0",
     "firebase-admin": "^11.5.0",
+    "framer-motion": "^9.0.7",
     "googleapis": "^110.0.0",
     "material-ui-image": "^3.3.2",
     "mongodb": "^4.13.0",
@@ -62,6 +63,7 @@
     "@types/multer": "^1.4.7",
     "@types/node": "^18.11.18",
     "@types/sanitize-html": "^2.8.0",
+    "@types/styled-components": "^5.1.26",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20"
   }
