--- a/front/package.json
+++ b/front/package.json
@@ -30,6 +30,8 @@
     "animejs": "^3.2.1",
     "aos": "^2.3.4",
     "axios": "^1.2.1",
+    "bcrypt": "^5.1.0",
+    "crypto-js": "^4.1.1",
     "dompurify": "^3.0.0",
     "eslint": "8.29.0",
     "eslint-config-next": "^12.0.4",
@@ -43,6 +45,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.1.0",
     "next": "13.0.6",
+    "next-auth": "^4.19.2",
     "option": "^0.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -58,6 +61,7 @@
   "devDependencies": {
     "@types/animejs": "^3.1.7",
     "@types/aos": "^3.0.4",
+    "@types/bcrypt": "^5.0.0",
     "@types/dompurify": "^2.4.0",
     "@types/mui-datatables": "^4.3.0",
     "@types/multer": "^1.4.7",
