--- a/front/package.json
+++ b/front/package.json
@@ -16,6 +16,7 @@
     "@mui/lab": "^5.0.0-alpha.114",
     "@mui/material": "^5.10.17",
     "@mui/styled-engine-sc": "^5.10.16",
+    "@next-auth/mongodb-adapter": "^1.1.1",
     "@tensorflow-models/coco-ssd": "^2.2.2",
     "@tensorflow-models/face-detection": "^1.0.1",
     "@tensorflow-models/face-landmarks-detection": "^1.0.2",
