--- a/front/package.json
+++ b/front/package.json
@@ -57,7 +57,8 @@
     "tailwindcss": "^3.2.4",
     "tensorflow-models": "^0.0.1",
     "tracking": "^1.1.3",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/animejs": "^3.1.7",
@@ -69,6 +70,7 @@
     "@types/node": "^18.11.18",
     "@types/sanitize-html": "^2.8.0",
     "@types/styled-components": "^5.1.26",
+    "@types/uuid": "^9.0.1",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20"
   }
