--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -1,31 +1,11 @@
-# FROM node:18.12.1
-
-# WORKDIR /usr/src/app/test-web-docker
-
-# COPY . .
-
-# WORKDIR /usr/src/app/test-web-docker/front
-
-# RUN npm install --force
-
-# COPY .next ./.next
-
-# EXPOSE 3000
-# CMD ["npm", "start"]
-
 FROM node:18.12.1
 
-WORKDIR /usr/src/app/test-dockerrr/front
-
-COPY package*.json ./
-
-RUN npm install --force
+WORKDIR /usr/src/app/test-myweb
 
 COPY . .
 
-COPY .next ./.next
+RUN npm install --force
+RUN npm run build
 
 EXPOSE 3000
-
 CMD ["npm", "start"]
-
