--- a/front/package.json
+++ b/front/package.json
@@ -9,24 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@firebase/app": "^0.9.1",
     "@mui/icons-material": "^5.10.16",
     "@mui/lab": "^5.0.0-alpha.114",
-    "@mui/material": "^5.10.17",
+    "@mui/material": "^5.11.11",
     "@mui/styled-engine-sc": "^5.10.16",
     "@next-auth/mongodb-adapter": "^1.1.1",
-    "@tensorflow-models/coco-ssd": "^2.2.2",
     "@tensorflow-models/face-detection": "^1.0.1",
-    "@tensorflow-models/face-landmarks-detection": "^1.0.2",
-    "@tensorflow-models/facemesh": "^0.0.5",
-    "@tensorflow-models/posenet": "^2.2.2",
-    "@tensorflow/tfjs": "^4.2.0",
-    "@tensorflow/tfjs-backend-wasm": "^4.2.0",
     "@tremor/react": "^1.6.0",
     "@types/lodash": "^4.14.191",
-    "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "animejs": "^3.2.1",
     "aos": "^2.3.4",
@@ -48,7 +41,7 @@
     "next": "13.0.6",
     "next-auth": "^4.19.2",
     "option": "^0.2.4",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-material-ui-carousel": "^3.4.2",
     "react-webcam": "^7.0.1",
