--- a/user/package.json
+++ b/user/package.json
@@ -17,9 +17,11 @@
     "@mui/material": "^5.11.11",
     "@mui/styled-engine-sc": "^5.10.16",
     "@next-auth/mongodb-adapter": "^1.1.1",
+    "@react-three/fiber": "^8.12.0",
     "@tremor/react": "^1.6.0",
     "@types/lodash": "^4.14.191",
     "@types/react-dom": "18.0.9",
+    "@vladmandic/face-api": "^1.7.10",
     "animejs": "^3.2.1",
     "aos": "^2.3.4",
     "axios": "^1.2.1",
@@ -46,6 +48,7 @@
     "styled-components": "^5.3.6",
     "swr": "^2.1.0",
     "tailwindcss": "^3.2.4",
+    "three": "^0.150.1",
     "tracking": "^1.1.3",
     "typescript": "4.9.4",
     "uuid": "^9.0.0"
@@ -59,6 +62,7 @@
     "@types/node": "^18.11.18",
     "@types/sanitize-html": "^2.8.0",
     "@types/styled-components": "^5.1.26",
+    "@types/three": "^0.149.0",
     "@types/uuid": "^9.0.1",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20"
