--- a/admin/package.json
+++ b/admin/package.json
@@ -44,6 +44,7 @@
     "react-webcam": "^7.0.1",
     "sanitize-html": "^2.10.0",
     "styled-components": "^5.3.6",
+    "swiper": "^9.1.1",
     "tailwindcss": "^3.2.4",
     "tracking": "^1.1.3",
     "typescript": "4.9.4",
