--- a/admin/package.json
+++ b/admin/package.json
@@ -32,6 +32,7 @@
     "firebase-admin": "^11.5.0",
     "framer-motion": "^9.0.7",
     "googleapis": "^110.0.0",
+    "material-react-table": "^1.9.2",
     "mongodb": "^4.13.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.1.0",
