--- a/admin/package.json
+++ b/admin/package.json
@@ -28,6 +28,7 @@
     "dompurify": "^3.0.0",
     "eslint": "8.29.0",
     "eslint-config-next": "^12.0.4",
+    "export-to-csv": "^0.2.1",
     "firebase": "^9.16.0",
     "firebase-admin": "^11.5.0",
     "framer-motion": "^9.0.7",
