--- a/admin/package.json
+++ b/admin/package.json
@@ -45,6 +45,7 @@
     "react-material-ui-carousel": "^3.4.2",
     "react-webcam": "^7.0.1",
     "sanitize-html": "^2.10.0",
+    "sharp": "^0.32.0",
     "styled-components": "^5.3.6",
     "swiper": "^9.1.1",
     "tailwindcss": "^3.2.4",
