--- a/admin/package.json
+++ b/admin/package.json
@@ -24,6 +24,7 @@
     "aos": "^2.3.4",
     "axios": "^1.2.1",
     "bcrypt": "^5.1.0",
+    "cropperjs": "^1.5.13",
     "crypto-js": "^4.1.1",
     "dompurify": "^3.0.0",
     "eslint": "8.29.0",
@@ -33,6 +34,7 @@
     "firebase-admin": "^11.5.0",
     "framer-motion": "^9.0.7",
     "googleapis": "^110.0.0",
+    "jimp": "^0.22.7",
     "material-react-table": "^1.9.2",
     "mongodb": "^4.13.0",
     "multer": "^1.4.5-lts.1",
@@ -42,10 +44,10 @@
     "option": "^0.2.4",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
+    "react-image-crop": "^10.0.9",
     "react-material-ui-carousel": "^3.4.2",
     "react-webcam": "^7.0.1",
     "sanitize-html": "^2.10.0",
-    "sharp": "^0.32.0",
     "styled-components": "^5.3.6",
     "swiper": "^9.1.1",
     "tailwindcss": "^3.2.4",
