--- a/user/package.json
+++ b/user/package.json
@@ -30,6 +30,7 @@
     "dompurify": "^3.0.0",
     "eslint": "8.29.0",
     "eslint-config-next": "^12.0.4",
+    "face-api.js": "^0.22.2",
     "firebase": "^9.16.0",
     "firebase-admin": "^11.5.0",
     "framer-motion": "^9.0.7",
