--- a/user/package.json
+++ b/user/package.json
@@ -22,6 +22,8 @@
     "@types/lodash": "^4.14.191",
     "@types/react-dom": "18.0.9",
     "@vladmandic/face-api": "^1.7.10",
+    "@zappar/sharing": "^1.1.7",
+    "@zappar/zappar-react-three-fiber": "^2.2.1",
     "animejs": "^3.2.1",
     "aos": "^2.3.4",
     "axios": "^1.2.1",
