--- a/user/package.json
+++ b/user/package.json
@@ -48,6 +48,7 @@
     "react-webcam": "^7.0.1",
     "sanitize-html": "^2.10.0",
     "styled-components": "^5.3.6",
+    "swiper": "^9.2.0",
     "swr": "^2.1.0",
     "tailwindcss": "^3.2.4",
     "three": "^0.150.1",
