--- a/user/package.json
+++ b/user/package.json
@@ -23,10 +23,11 @@
     "@vladmandic/face-api": "^1.7.10",
     "animejs": "^3.2.1",
     "aos": "^2.3.4",
-    "axios": "^1.2.1",
+    "axios": "^1.3.5",
     "bcrypt": "^5.1.0",
     "crypto-js": "^4.1.1",
     "dompurify": "^3.0.0",
+    "dotenv": "^16.0.3",
     "eslint": "8.29.0",
     "eslint-config-next": "^12.0.4",
     "firebase": "^9.16.0",
