--- a/user/package.json
+++ b/user/package.json
@@ -21,6 +21,9 @@
     "@types/lodash": "^4.14.191",
     "@types/react-dom": "18.0.9",
     "@vladmandic/face-api": "^1.7.10",
+    "@zappar/video-recorder": "^0.1.22",
+    "@zappar/webgl-snapshot": "^1.1.0",
+    "@zappar/zappar-threejs": "^2.1.2",
     "animejs": "^3.2.1",
     "aos": "^2.3.4",
     "axios": "^1.3.5",
@@ -34,6 +37,7 @@
     "firebase-admin": "^11.5.0",
     "framer-motion": "^9.0.7",
     "googleapis": "^110.0.0",
+    "memory-cache": "^0.2.0",
     "mongodb": "^4.13.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.1.0",
@@ -59,6 +63,7 @@
     "@types/aos": "^3.0.4",
     "@types/bcrypt": "^5.0.0",
     "@types/dompurify": "^2.4.0",
+    "@types/memory-cache": "^0.2.2",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.11.18",
     "@types/sanitize-html": "^2.8.0",
