--- a/admin/package.json
+++ b/admin/package.json
@@ -17,7 +17,7 @@
     "@mui/material": "^5.11.11",
     "@mui/styled-engine-sc": "^5.10.16",
     "@next-auth/mongodb-adapter": "^1.1.1",
-    "@tremor/react": "^1.6.0",
+    "@tremor/react": "^2.4.0",
     "@types/lodash": "^4.14.191",
     "@types/react-dom": "18.0.9",
     "animejs": "^3.2.1",
@@ -36,6 +36,7 @@
     "googleapis": "^110.0.0",
     "jimp": "^0.3.5",
     "material-react-table": "^1.9.2",
+    "moment": "^2.29.4",
     "mongodb": "^4.13.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.1.0",
