--- a/user/package.json
+++ b/user/package.json
@@ -35,6 +35,7 @@
     "framer-motion": "^9.0.7",
     "googleapis": "^110.0.0",
     "memory-cache": "^0.2.0",
+    "mind-ar": "^1.2.1",
     "mongodb": "^4.13.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.1.0",
