--- a/user/package.json
+++ b/user/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^16.0.3",
     "eslint": "8.29.0",
     "eslint-config-next": "^12.0.4",
+    "file-saver": "^2.0.5",
     "firebase": "^9.16.0",
     "firebase-admin": "^11.5.0",
     "framer-motion": "^9.0.7",
@@ -61,6 +62,7 @@
     "@types/aos": "^3.0.4",
     "@types/bcrypt": "^5.0.0",
     "@types/dompurify": "^2.4.0",
+    "@types/file-saver": "^2.0.5",
     "@types/memory-cache": "^0.2.2",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.11.18",
