--- a/admin/package.json
+++ b/admin/package.json
@@ -24,6 +24,7 @@
     "aos": "^2.3.4",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "core-js": "^3.30.2",
     "cropperjs": "^1.5.13",
     "crypto-js": "^4.1.1",
     "dompurify": "^3.0.0",
